--- a/Codingdojang.ipynb
+++ b/Codingdojang.ipynb
@@ -604,25 +604,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>>6\n",
-      "OOOOOX\n",
-      "OOOOXX\n",
-      "OOOXXX\n",
-      "OOXXXX\n",
-      "OXXXXX\n",
-      "XXXXXX\n"
+      ">> 6\n",
+      "12\n"
      ]
     }
    ],
    "source": [
-    "print((lambda n: '\\n'.join('O'*(n-i) + 'X'*i for i in range(1,n+1)))(int(input('>>> '))))"
+    "print((lambda n: '\\n'.join('O'*(n-i) + 'X'*i for i in range(1,n+1)))(int(input('>>> '))))\n",
+    "\n",
+    "(lambda x: print(2*x))(int(input('>> ')))  \n",
+    "# lambda 함수는 앞에 함수명을 적어줘야 하지만, 뒤에 값을 붙여주면 바로 값을 반환한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> 6\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "twice = (lambda x: 2*x)(int(input('>> ')))\n",
+    "print(twice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> 6\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "twice = lambda x: 2*x\n",
+    "\n",
+    "num = twice(int(input('>> ')))\n",
+    "print(num)"
    ]
   },
   {
