--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -680,20 +680,101 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 버전 비교\n",
+    "A씨는 두 개의 버전을 비교하는 프로그램을 작성해야 한다.\n",
+    "\n",
+    "버전은 다음처럼 \".\" 으로 구분된 문자열이다.\n",
+    "\n",
+    "버전 예) ```1.0.0```, ```1.0.23```, ```1.1```\n",
+    "\n",
+    "두 개의 버전을 비교하는 프로그램을 작성하시오.\n",
+    "\n",
+    "다음은 버전 비교의 예이다.\n",
+    "```\n",
+    "0.0.2 > 0.0.1\n",
+    "1.0.10 > 1.0.3\n",
+    "1.2.0 > 1.1.99\n",
+    "1.1 > 1.0.1\n",
+    "```\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ver1 and ver2 are same version\n"
+     ]
+    }
+   ],
+   "source": [
+    "ver1 = '0.0.3'.split('.')\n",
+    "ver2 = '0.0.3'.split('.')\n",
+    "num = 0\n",
+    "\n",
+    "for i in range(3):\n",
+    "    a, b = ver1[i], ver2[i]\n",
+    "    if a > b:\n",
+    "        print('ver1 is a higher version')\n",
+    "        num = 1\n",
+    "        break\n",
+    "    elif a < b:\n",
+    "        print('ver2 is a higher version')\n",
+    "        num = 2\n",
+    "        break\n",
+    "\n",
+    "if not num: print('ver1 and ver2 are same version')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "### format을 저렇게 쓸수도 있구나"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0.2 > 0.0.1\n",
+      "1.0.10 > 1.0.3\n",
+      "1.2.0 > 1.1.99\n",
+      "1.1 > 1.0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import zip_longest\n",
+    "\n",
+    "def compare(left, right):\n",
+    "    left_vars = map(int, left.split('.'))\n",
+    "    right_vars = map(int, right.split('.'))\n",
+    "    for a, b in zip_longest(left_vars, right_vars, fillvalue = 0):\n",
+    "        if a > b:\n",
+    "            return '>'\n",
+    "        elif a < b:\n",
+    "            return '<'\n",
+    "    return '='\n",
+    "\n",
+    "CASES = [['0.0.2', '0.0.1'],\n",
+    "         ['1.0.10', '1.0.3'],\n",
+    "         ['1.2.0', '1.1.99'],\n",
+    "         ['1.1', '1.0.1']]\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    for case in CASES:\n",
+    "        print('{0[0]} {1} {0[1]}'.format(case, compare(*case)))"
    ]
   },
   {
@@ -706,14 +787,91 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1~1000에서 각 숫자의 개수 구하기\n",
+    "예로 10 ~ 15 까지의 각 숫자의 개수를 구해보자\n",
+    "```\n",
+    "10 = 1, 0\n",
+    "11 = 1, 1\n",
+    "12 = 1, 2\n",
+    "13 = 1, 3\n",
+    "14 = 1, 4\n",
+    "15 = 1, 5\n",
+    "```\n",
+    "그러므로 이 경우의 답은 0:1개, 1:7개, 2:1개, 3:1개, 4:1개, 5:1개"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 의 갯수 : 192\n",
+      "1 의 갯수 : 301\n",
+      "2 의 갯수 : 300\n",
+      "3 의 갯수 : 300\n",
+      "4 의 갯수 : 300\n",
+      "5 의 갯수 : 300\n",
+      "6 의 갯수 : 300\n",
+      "7 의 갯수 : 300\n",
+      "8 의 갯수 : 300\n",
+      "9 의 갯수 : 300\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_line = ''\n",
+    "\n",
+    "for a in range(1,1001):\n",
+    "    num_list = str(a)\n",
+    "    num_line += num_list\n",
+    "    \n",
+    "for i in range(10): print(i, '의 갯수 :', num_line.count(str(i)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionary를 이용해서 더 실용적이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 1: 0, 2: 0, 3: 0, 4: 0, 5: 0, 6: 0, 7: 0, 8: 0, 9: 0}\n",
+      "{0: 192, 1: 301, 2: 300, 3: 300, 4: 300, 5: 300, 6: 300, 7: 300, 8: 300, 9: 300}\n"
+     ]
+    }
+   ],
+   "source": [
+    "count={ x:0 for x in range(0,10) }\n",
+    "\n",
+    "print(count)\n",
+    "\n",
+    "for x in range(1,1001):\n",
+    "    for i in str(x):\n",
+    "        count[int(i)] += 1\n",
+    "\n",
+    "print(count)"
+   ]
   },
   {
    "cell_type": "markdown",
