--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 같은 문제의 첫 번째 풀이가 제 풀이입니다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Lv.1 \n"
    ]
   },
@@ -100,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 복기 : count 함수와 sort 함수에 대해 숙지하기"
+    "### 복기 : count 함수와 sort 함수에 대해 숙지"
    ]
   },
   {
@@ -604,36 +611,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">> 6\n",
-      "12\n"
+      ">>> 5\n",
+      "OOOOX\n",
+      "OOOXX\n",
+      "OOXXX\n",
+      "OXXXX\n",
+      "XXXXX\n",
+      ">> 5\n",
+      "10\n"
      ]
     }
    ],
    "source": [
     "print((lambda n: '\\n'.join('O'*(n-i) + 'X'*i for i in range(1,n+1)))(int(input('>>> '))))\n",
     "\n",
-    "(lambda x: print(2*x))(int(input('>> ')))  \n",
+    "(lambda x: print(2*x))(int(input('>> ')))\n",
     "# lambda 함수는 앞에 함수명을 적어줘야 하지만, 뒤에 값을 붙여주면 바로 값을 반환한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">> 6\n",
-      "12\n"
+      ">> 123\n",
+      "246\n"
      ]
     }
    ],
@@ -863,7 +876,6 @@
    ],
    "source": [
     "count={ x:0 for x in range(0,10) }\n",
-    "\n",
     "print(count)\n",
     "\n",
     "for x in range(1,1001):\n",
@@ -872,6 +884,425 @@
     "\n",
     "print(count)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10~1000까지 각 숫자 분해하여 곱하기의 전체 합 구하기\n",
+    "예로, 10~15까지의 각 숫자 분해하여 곱하기의 전체 합은 다음과 같다.\n",
+    "```\n",
+    "10 = 1 * 0 = 0\n",
+    "11 = 1 * 1 = 1\n",
+    "12 = 1 * 2 = 2\n",
+    "13 = 1 * 3 = 3\n",
+    "14 = 1 * 4 = 4\n",
+    "15 = 1 * 5 = 5\n",
+    "```\n",
+    "그러므로, 이 경우의 답은 0+1+2+3+4+5 = 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93150\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_list = list(range(10, 1001))\n",
+    "sum_ = 0\n",
+    "\n",
+    "for num in num_list:\n",
+    "    num = str(num)\n",
+    "    if int(num) < 100: sum_ += eval(num[0]+'*'+num[1])\n",
+    "    elif int(num) < 1000: sum_ += eval(num[0]+'*'+num[1]+'*'+num[2])\n",
+    "\n",
+    "print(sum_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 문자열은 각 문자에 인덱스가 있기 때문에 문자 사이에 join이 들어간다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93150\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(eval('*'.join(str(x))) for x in range(10,1001)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1*6*8*8*7*4*6*5'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'*'.join('16887465')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### DashInsert 함수는 숫자로 구성된 문자열을 입력받은 뒤, 문자열 내에서 홀수가 \n",
+    "#### 연속되면 두 수 사이에 - 를 추가하고, 짝수가 연속되면 * 를 추가하는 기능을 갖고 있다. \n",
+    "```(예, 454 => 454, 4546793 => 454*67-9-3) ```\n",
+    "#### DashInsert 함수를 완성하자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요 : 19872484348168\n",
+      "1-9872*4*8*434*816*8\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = input('숫자를 입력하세요 : ')\n",
+    "result = number[0]\n",
+    "\n",
+    "for i in range(len(number)-1):\n",
+    "    # 둘 다 짝수일 때\n",
+    "    if not (int(number[i])%2 or int(number[i+1])%2): result += '*'+number[i+1]\n",
+    "    # 둘 다 홀수일 때\n",
+    "    elif int(number[i])%2 and int(number[i+1])%2: result += '-'+number[i+1]\n",
+    "    else: result += number[i+1]\n",
+    "        \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 정규 표현식은 알아두면 좋다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":6154981\n",
+      "61-54981\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "print(re.sub(r'(([02468]{2,})|([13579]{2,}))', \n",
+    "             lambda x:'*'.join(x.group(2)) if x.group(2) else '-'.join(x.group(3)), \n",
+    "             input(\":\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 자기 자신을 제외한 모든 양의 약수들의 합이 자기 자신이 되는 자연수를 완전수라고 한다. \n",
+    "#### 예를 들면, 6과 28은 완전수이다. \n",
+    "```\n",
+    "6 = 1+2+3\n",
+    "28 = 1+2+4+7+14\n",
+    "```\n",
+    "입력으로 자연수 N을 받고, 출력으로 N 이하의 모든 완전수를 출력하는 코드를 작성하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요 : 1000\n",
+      "6\n",
+      "28\n",
+      "496\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_num = int(input('숫자를 입력하세요 : '))\n",
+    "\n",
+    "for i in range(1, input_num+1):\n",
+    "    sum_ = 0\n",
+    "    for j in range(1, i):\n",
+    "        if not i % j: \n",
+    "            sum_ += j\n",
+    "        if (i-1)==j and sum_ == i: \n",
+    "            print(i)\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 자신을 제외한 약수를 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 8128\n",
+      "[1, 2, 4, 8, 16, 32, 64, 127, 254, 508, 1016, 2032, 4064]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list((lambda n: (i for i in range(1, n) if not n % i))(int(input('>>> ')))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 내 코드를 한줄로 줄인다면 : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하시오 : 1000\n",
+      "[6, 28, 496]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num= int(input(\"숫자를 입력하시오 : \"))\n",
+    "\n",
+    "print([x for x in range(1, num+1) if x==sum(y for y in range(1, x) if not x%y)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
