--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -1169,7 +1169,7 @@
     }
    ],
    "source": [
-    "num= int(input(\"숫자를 입력하시오 : \"))\n",
+    "num = int(input(\"숫자를 입력하시오 : \"))\n",
     "\n",
     "print([x for x in range(1, num+1) if x==sum(y for y in range(1, x) if not x%y)])"
    ]
@@ -1191,20 +1191,68 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Special Pythagorean triplet\n",
+    "세 자연수 a, b, c 가 피타고라스 정리 $a^2 + b^2 = c^2$ 를 만족하면 피타고라스 수라고 부릅니다.\n",
+    "\n",
+    "a + b + c = 1000 인 피타고라스 수 a, b, c는 한 가지 뿐입니다. 이 때, a × b × c 는 얼마입니까?"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200 , 375 = 425.0\n",
+      "31875000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import sqrt\n",
+    "\n",
+    "num_list = list(range(1, 400))\n",
+    "\n",
+    "for i in num_list:\n",
+    "    num_list_rev = list(range(400, i-1, -1))\n",
+    "    for j in num_list_rev:\n",
+    "        c = sqrt(i**2 + j**2)\n",
+    "        if c % 1 == 0 and i + j + c == 1000.0:\n",
+    "            print(i, ',', j, '=',c)\n",
+    "            print(int(i*j*c))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "$a+b+c = 1000$, $a+b>c$ 이므로(삼각형이니까) $c<500$ 이며 즉, $a<b<c<500$.\n",
+    "\n",
+    "$a+b+c = 1000$, $a^2+b^2=c^2$인 경우가 유일하므로, $c-b=\\dfrac{a^2}{(1000-a)}$의 값이 정수가 되는 값도 유일하다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31875000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a_b = [i for i in range(1,500) if (i**2 / (1000-i)) % 1 == 0]  # [200, 375]\n",
+    "print(np.prod(a_b) * (1000-sum(a_b)))  # 200 * 375 * (1000 - (200+375))"
    ]
   },
   {
@@ -1217,14 +1265,77 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Even Fibonacci numbers\n",
+    "피보나치 수열의 각 항은 바로 앞의 항 두 개를 더한 것이 됩니다. 1과 2로 시작하는 경우 이 수열은 아래와 같습니다.\n",
+    "```\n",
+    "1, 2, 3, 5, 8, 13, 21, 34, 55, 89, ...\n",
+    "```\n",
+    "짝수이면서 4백만 이하인 모든 항을 더하면 얼마가 됩니까?"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4613732\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "Fibonacci = [1, 2]\n",
+    "\n",
+    "while Fibonacci[i]+Fibonacci[i+1] < 4000000:\n",
+    "    Fibonacci.append(Fibonacci[i]+Fibonacci[i+1])\n",
+    "    i += 1\n",
+    "    \n",
+    "print(sum([i for i in Fibonacci if not i % 2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 그냥 다른 방법 : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4613732\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = [0,1]\n",
+    "sum_ = 0\n",
+    "\n",
+    "while b <= 4000000:\n",
+    "    a = a + b\n",
+    "    b, a = a, b\n",
+    "    if b % 2 == 0: sum_ += b\n",
+    "        \n",
+    "print(sum_)"
+   ]
   },
   {
    "cell_type": "markdown",
