--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -5798,16 +5798,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>> 25\n",
-      "26771144400\n",
-      "[1, 1, 2, 3, 2, 5, 1, 7, 2, 3, 1, 11, 1, 13, 1, 1, 2, 17, 1, 19, 1, 1, 1, 23, 1, 5]\n"
+      ">>> 20\n",
+      "232792560\n",
+      "[1, 1, 2, 3, 2, 5, 1, 7, 2, 3, 1, 11, 1, 13, 1, 1, 2, 17, 1, 19, 1]\n"
      ]
     }
    ],
@@ -6580,14 +6580,77 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 애니펑 (사이냅소프트 2017 하반기 공채문제)\n",
+    "네, 맞습니다. 우리의 주인공은 올해에는 애니펑!이라는 게임을 만들어보기로 마음먹었어요!! 하지만 함께 할 파티원을 아직 구하지 못해서, 일단은 핵심 로직이라도 구현해보려 합니다.\n",
+    "\n",
+    "누구나 알 것 같은 애니펑! 게임의 규칙을 굳이 써 보자면 아래와 같습니다.\n",
+    "\n",
+    "- 타일판은 5 × 5\n",
+    "- 타일 종류는 1 ~ 4의 네 가지\n",
+    "- 가로나 세로로 3개 이상 같은 타일이 연속될 경우 펑! 사라지고, 그 자리에는 위쪽의 타일들이 내려와서 메꿉니다.\n",
+    "- 내려오면서 비게 된 자리는 0으로 채워집니다.\n",
+    "- 위의 규칙대로 동작하는 프로그램을 작성해주세요.\n",
+    "\n",
+    "프로그래밍 언어에 제약은 없지만, 외부 라이브러리는 사용하지 마세요.\n",
+    "\n",
+    "입력 형식\n",
+    "\n",
+    "아래 예와 같은 5 × 5 숫자 배열을 표준입력으로 읽어들임\n",
+    "```\n",
+    "2 4 1 2 1\n",
+    "3 4 2 3 3\n",
+    "2 4 1 2 2\n",
+    "4 4 4 1 2\n",
+    "4 2 3 3 2\n",
+    "```\n",
+    "출력형식\n",
+    "\n",
+    "같은 타일들을 모두 처리한 후의 최종 5 × 5 숫자 배열\n",
+    "```\n",
+    "0 0 0 0 0\n",
+    "2 0 0 0 0\n",
+    "3 0 0 0 0\n",
+    "2 0 0 2 0\n",
+    "4 0 1 3 0\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 2 4 1 2 1\n",
+      ">>> 3 4 2 3 3\n",
+      ">>> 2 4 1 2 2\n",
+      ">>> 4 4 4 1 2\n",
+      ">>> 4 2 3 3 2\n",
+      "['2', '4', '1', '2', '1']\n",
+      "['3', '4', '2', '3', '3']\n",
+      "['2', '4', '1', '2', '2']\n",
+      "['4', '4', '4', '1', '2']\n",
+      "['4', '2', '3', '3', '2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_1 = input('>>> ').split(' ')\n",
+    "a_2 = input('>>> ').split(' ')\n",
+    "a_3 = input('>>> ').split(' ')\n",
+    "a_4 = input('>>> ').split(' ')\n",
+    "a_5 = input('>>> ').split(' ')\n",
+    "\n",
+    "print(a_1)\n",
+    "print(a_2)\n",
+    "print(a_3)\n",
+    "print(a_4)\n",
+    "print(a_5)"
+   ]
   },
   {
    "cell_type": "markdown",
