--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -6091,20 +6091,56 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 자신을 제외한 곱셈\n",
+    "배열 [a, b, c, d]를 입력하면 배열[bcd, acd, abd, abc]를 출력하는 코드를 작성하시오.\n",
+    "\n",
+    "(단, 나눗셈 사용 금지)\n",
+    "\n",
+    "입출력되는 배열은 어떤 형식이든 상관없습니다.\n",
+    "```\n",
+    "입력 예시\n",
+    "2, 6, 4, 7\n",
+    "```\n",
+    "```\n",
+    "출력 예시\n",
+    "168, 56, 84, 48\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 1, 3, 5, 7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[105, 35, 21, 15]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "---"
+    "list_num = input('>>> ').split(', ')\n",
+    "ans = []\n",
+    "\n",
+    "for i in range(4):\n",
+    "    A = list_num.copy()\n",
+    "    del A[i]\n",
+    "    ans.append(eval('*'.join(A)))\n",
+    "    \n",
+    "ans"
    ]
   },
   {
@@ -6117,13 +6153,31 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -6639,18 +6693,39 @@
     }
    ],
    "source": [
-    "a_1 = input('>>> ').split(' ')\n",
-    "a_2 = input('>>> ').split(' ')\n",
-    "a_3 = input('>>> ').split(' ')\n",
-    "a_4 = input('>>> ').split(' ')\n",
-    "a_5 = input('>>> ').split(' ')\n",
+    "r_1 = input('>>> ').split(' ')\n",
+    "r_2 = input('>>> ').split(' ')\n",
+    "r_3 = input('>>> ').split(' ')\n",
+    "r_4 = input('>>> ').split(' ')\n",
+    "r_5 = input('>>> ').split(' ')\n",
     "\n",
-    "print(a_1)\n",
-    "print(a_2)\n",
-    "print(a_3)\n",
-    "print(a_4)\n",
-    "print(a_5)"
+    "c_1 = [r_1[0], r_2[0], r_3[0], r_4[0], r_5[0]]\n",
+    "c_2 = [r_1[1], r_2[1], r_3[1], r_4[1], r_5[1]]\n",
+    "c_3 = [r_1[2], r_2[2], r_3[2], r_4[2], r_5[2]]\n",
+    "c_4 = [r_1[3], r_2[3], r_3[3], r_4[3], r_5[3]]\n",
+    "c_5 = [r_1[4], r_2[4], r_3[4], r_4[4], r_5[4]]\n",
+    "\n",
+    "if "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'replace'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-4410e821f6b0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'4'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'0'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'replace'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
