--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -6160,6 +6160,133 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 농장 분할\n",
+    "밥 아저씨는 돈을 힘들게 모은 끝에 한 토지를 구입했다.\n",
+    "\n",
+    "밥 아저씨는 그 토지에 유명한 식물을 심을려고 하는데,\n",
+    "\n",
+    "그 식물은 주변 √n 미터 안에 다른 식물이 있으면 자라지 못한 다고 한다.\n",
+    "\n",
+    "그러므로 토지의 넓이를 n으로 나누어야 한다.\n",
+    "\n",
+    "토지의 가로와 세로의 길이를 입력받을때, 최대 심을 수 있는 식물의 개수는?\n",
+    "\n",
+    "(단, n의 값은 식이 성립하는 n의 범위 중에서 최대여야 한다.)\n",
+    "```\n",
+    "예)\n",
+    "640  400\n",
+    "\n",
+    "1980 640\n",
+    "```\n",
+    "```\n",
+    "답)\n",
+    "40\n",
+    "\n",
+    "3168\n",
+    "```\n",
+    "단 반드시 그 나무를 중심으로 한 √n 영역이 필요하다. 그리고 그 영역이 다른 영역과 겹치면 안된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 1980 640\n",
+      "3168\n"
+     ]
+    }
+   ],
+   "source": [
+    "land = list(map(int, input('>>> ').split(' ')))   # 예시) 1980 640\n",
+    "\n",
+    "for i in range(min(land)//2, 0, -1):\n",
+    "    if not (max(land) % i or min(land) % i):\n",
+    "        print(max(land) * min(land)//i**2)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 최대공약수를 구하는 참신한 방식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "토지의 가로 세로 길이를 입력하세요 ex) 120 260 \n",
+      " 입력 : 1980 640\n",
+      "3168.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = tuple(map(int, input('토지의 가로 세로 길이를 입력하세요 ex) 120 260 \\n 입력 : ').split()))\n",
+    "c = a * b\n",
+    "\n",
+    "while a: a, b = max(a, b) % min(a, b), min(a, b) \n",
+    "\n",
+    "print(c/b**2)\n",
+    "\n",
+    "## 1980 640  > 640 60  > 60 40  > 40 20=b  > 20 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -6205,6 +6332,132 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
