--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -6261,20 +6261,48 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 문자열을 제거한뒤 숫자만반환\n",
+    "난이도:(쉬움) 현우는 축구를보다가 우리나라선수들의몸값을 알고싶었다\n",
+    "\n",
+    "그래서 검색을해서 메모장에 적는데 키보드가 조그만하고 안좋은지라\n",
+    "\n",
+    "자꾸 숫자가아닌 문자를 같이입력해버린다\n",
+    "```\n",
+    "ex: xxx : 1627000000 > xxx : 1w627r00o00p00 만 (특수문자제외)\n",
+    "```\n",
+    "현우는 왜인지모르지만 뜻대로안되는것에\n",
+    "\n",
+    "너무화가나서 자신이수량을입력하면 문자열만 딱빼서 숫자만 반환하는 코드를 만들고싶어한다\n",
+    "\n",
+    "화가난 현우를위해 코드를 만들어보자!"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 15edw6d1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'1561'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "---"
+    "''.join([i for i in input('>>> ') if i in '0123456789'])"
    ]
   },
   {
@@ -6287,169 +6315,433 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 숫자를 입력받으면 그에 맞는 자릿수 출력\n",
+    "숫자를 입력받으면 그에 해당하는 자릿수를 출력하는 코드를 작성하라.\n",
+    "```\n",
+    "입력 : 156 ,  출력 : 100의자리수\n",
+    "입력 : 18961 ,  출력 : 10000의자릿수\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 65164\n",
+      "10000의 자릿수\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(10**(len(input('>>> '))-1), '의 자릿수', sep='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 중앙값 구하기\n",
+    "리스트에 있는 숫자들의 중앙값을 구하는 프로그램을 만들어라.\n",
+    "```\n",
+    "[7, 9, 14] = 9\n",
+    "[24, 31, 35, 49] = 33\n",
+    "[17, 37, 37, 47, 57] = 37\n",
+    "```\n",
+    "중앙값 : 자료를 작은 값에서부터 크기순으로 나열할 때 중앙에 위치한 값\n",
+    "\n",
+    "① 자료의 개수가 홀수이면 가운데 위치한 값이 중앙값이다.\n",
+    "\n",
+    "② 자료의 개수가 짝수이면 가운데 위치한 두 값의 평균이 중앙값이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 12 45 78 98 65 32 498 945\n",
+      "81.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_list = input('>>> ').split(' ')\n",
+    "num_len = len(num_list)\n",
+    "\n",
+    "if num_len % 2: print(num_list[num_len//2])# 홀수 길이\n",
+    "else: print(eval(num_list[num_len//2]+'+'+num_list[num_len//2-1])/2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 이 이후로 너무 쉬운 문제는 제외"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MVP를 찾아라\n",
+    "\\\n",
+    "#### 게임 개발\n",
+    "\n",
+    "당신이 참여했던 RPG게임이 대박이 나서 당신과 당신의 회사는 새로운 게임을 개발하기로 했다.\n",
+    "\n",
+    "여러 날의 회의 끝에 새로운 게임의 장르는 AOS(MOBA)로 현재 자신들의 RPG게임의 IP를 사용하기로 했다.\n",
+    "\n",
+    "그렇게 몇 날 며칠을 토론을 하며 게임의 틀이 잡혀졌고 각고의 노력 끝에 게임을 출시했다.\n",
+    "\n",
+    "반응은 좋았으나 다른 게임들에 있는 MVP시스템이 있었으면 좋겠다는 요청이 들어와\n",
+    "\n",
+    "빠져나가기 쉬운 유저들을 붙잡아두기 위해선 유저들의 요구를 하루빨리 들어주어야 했고\n",
+    "\n",
+    "그 결과 실력이 가장 좋은 당신이 프로그래밍을 맡게되었다.\n",
+    "\n",
+    "최대한 빠른 시일 내에, MVP를 출력하는 프로그램을 작성하시오.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 조건\n",
+    "\n",
+    "한 게임의 유저는 총 열명으로 두팀으로 나뉜다. (A1,A2...A5 와 B1,B2...B5로 구성된다.)\n",
+    "\n",
+    "총 10줄에 걸쳐 각 유저들의 K/D/A를 입력받고 그에 따른 점수가 가장 높은 유저를 출력한다.\n",
+    "\n",
+    "점수는 (K * 2 + A )/ (D+1) 이며 소수점 셋째 자리에서 반올림한다.\n",
+    "\n",
+    "만약 같은 팀인데 점수가 똑같다면 점수가 똑같은 사람중에 어느 누구를 출력해도 상관이 없다.\n",
+    "\n",
+    "오류가 있는 데이터는 존재하지 않는다. 즉, 데이터로는 더블킬인데 킬은 2킬보다 적은 경우는 주어지지 않는다.\n",
+    "\n",
+    "데이터는 순서대로 주어지며 언제나 위쪽에 있는 데이터 5줄이 승자다.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 1차 업데이트\n",
+    "\n",
+    "이 게임도 성공을 하고 운영을 하던 도중 또 MVP시스템을 수정해달라는 글이 여럿 올라왔었다.\n",
+    "\n",
+    "바로 연속으로 상대를 처치한 그 업적을 인정해주지 않는다는 것이었다.\n",
+    "\n",
+    "그리고 자신의 팀이 이겼고 상대와 내가 점수가 똑같은데 왜 상대가 MVP냐는 글도 여럿 있었다.\n",
+    "\n",
+    "그 글들을 취합해 당신은 또 다시 MVP시스템을 업그레이드 하게 되었다.\n",
+    "\n",
+    "업데이트 항목 : 연속으로 상대를 처치함에 따라 점수를 더하고 승리한 팀에게 모두 1점을 더하시오.\n",
+    "\n",
+    "펜타킬 : P : 4\n",
+    "\n",
+    "쿼드라킬 : Q : 3\n",
+    "\n",
+    "트리플킬 : T : 2\n",
+    "\n",
+    "더블킬 : D : 1\n",
+    "\n",
+    "없음 : N : 0\n",
+    "\n",
+    "---\n",
+    "\n",
+    "입력\n",
+    "```\n",
+    "3/0/4 D\n",
+    "2/5/6 N\n",
+    "12/4/2 P\n",
+    "1/2/8 N\n",
+    "2/2/8 N\n",
+    "5/5/2 T\n",
+    "1/5/2 N\n",
+    "1/3/1 N\n",
+    "2/4/5 N\n",
+    "4/3/5 Q\n",
+    "```\n",
+    "\n",
+    "출력\n",
+    "```\n",
+    "A1\n",
+    "```\n",
+    "A1 = 12.0, A2 = 2.67, A3 = 10.2, A4 = 4.33, A5 = 5.0,\n",
+    "\n",
+    "---\n",
+    "\n",
+    "B1 = 4.0, B2 = 0.67, B3 = 0.75, B4 = 1.8, B5 = 6.25\n",
+    "\n",
+    "가장 점수가 큰 A1이 MVP이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 3/0/4 D 2/5/6 N 12/4/2 P 1/2/8 N 2/2/8 N 5/5/2 T 1/5/2 N 1/3/1 N 2/4/5 N 4/3/5 Q\n",
+      "[12.0, 2.667, 10.2, 4.333, 5.0, 4.0, 0.667, 0.75, 1.8, 6.25]\n",
+      "A1\n"
+     ]
+    }
+   ],
+   "source": [
+    "score_list = input('>>> ').split(' ')\n",
+    "result = []\n",
+    "\n",
+    "for idx, one in enumerate(score_list[0:20:2]):\n",
+    "    a, b, c = list(map(int, one.split('/')))\n",
+    "    if idx < 5:\n",
+    "        result.append(round((a*2+c)/(b+1), 3) + 1)\n",
+    "    else:\n",
+    "        result.append(round((a*2+c)/(b+1), 3))\n",
+    "    \n",
+    "for idx, one in enumerate(score_list[1:20:2]):\n",
+    "    if one == 'P': result[idx] += 4\n",
+    "    elif one == 'Q': result[idx] += 3\n",
+    "    elif one == 'T': result[idx] += 2\n",
+    "    elif one == 'D': result[idx] += 1\n",
+    "    elif one == 'N': pass\n",
+    "    \n",
+    "print(result)\n",
+    "if result.index(max(result)) < 5: print('A', result.index(max(result))+1, sep='')\n",
+    "else: print('B', result.index(max(result))-4, sep='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 잘 우겨넣은 코딩.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3/0/4 D\n",
+      "3/0/4 D\n",
+      "3/0/4 D\n",
+      "3/0/4 D\n",
+      "3/0/4 D\n",
+      "3/0/4 D\n",
+      "3/0/4 D\n",
+      "3/0/4 D\n",
+      "3/0/4 D\n",
+      "3/0/4 D\n"
+     ]
+    }
+   ],
+   "source": [
+    "CK = ['N','D','T','Q','P']   # 점수를 인덱스로 이용할 생각을 함\n",
+    "\n",
+    "data = list(input().split() for x in range(10))   # 10번 input을 받아서 리스트로 저장\n",
+    "\n",
+    "for x in range(10):\n",
+    "    k = list(map(int,data[x][0].split('/')))   # 이걸 a, b, c로 받았으면 더 보기 좋았을 듯\n",
+    "    data[x] = round((k[0]*2+k[2])/(k[1]+1),2) + (1 if x < 5 else 0) + CK.index(data[x][1])  # 알파벳에 해당하는 점수값을 받아옴\n",
+    "    \n",
+    "n = data.index(max(data))\n",
+    "\n",
+    "print('MVP :' + ['A','B'][0 if n < 5 else 1] + str(n+1))   # 인덱스가 들어갈 자리에 조건문을 바로 넣은 센스"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 남은퇴근시간 계산기\n",
+    "현우는 성인이되어 회사에입사했다.\n",
+    "\n",
+    "하지만 들어간기업이 하필 할일없는 중소기업이라\n",
+    "\n",
+    "퇴근시간까지 놀다가 퇴근시간에 퇴근하는것이 일상화가되어버렸다..\n",
+    "\n",
+    "현우는 심심한지라 좀더효율적으로놀기위해\n",
+    "\n",
+    "현재부터 퇴근시간까지 남은시간을 알려주는 계산기를 만들어\n",
+    "\n",
+    "계산적으로놀고싶었다 우리가현우를 도와주자!!\n",
+    "\n",
+    "(참고로 현우의퇴근시간은 17시30분이다)\n",
+    "```\n",
+    "input: 현재시간\n",
+    "output: 남은시간  hh:mm:ss\n",
+    "```\n",
+    "or\n",
+    "\n",
+    "`남은시간 : s`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 10:23:24\n",
+      "남은시간 :7:6:36\n"
+     ]
+    }
+   ],
+   "source": [
+    "hh, mm, ss = list(map(int, input('>>> ').split(':')))\n",
+    "print('남은시간 ', 17-hh, 29-mm, 60-ss, sep=':')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 숫자,문자열 구별하기\n",
+    "문자와 숫자가섞인 문자열을 입력받을때 구별하여출력해라\n",
+    "```\n",
+    "input:\n",
+    "\"c910m6ia 1ho\"\n",
+    "output:\n",
+    "str : cma ho\n",
+    "int : 91061\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> d56as4d a6s54d \n",
+      "str : dasd asd \n",
+      "int : 564654\n"
+     ]
+    }
+   ],
+   "source": [
+    "sep = input('>>> ')\n",
+    "\n",
+    "print('str : ' + ''.join(list(i for i in sep if i not in '0123456789')), \n",
+    "     'int : ' + ''.join(list(i for i in sep if i in '0123456789')), sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "'23'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
