--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -6724,24 +6724,167 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 정수와 소수 구별하기\n",
+    "프로그래머 X는 코딩을 하다가 문득, 수학 시간에 배운 정수와 소수를 구별하는 방법을 떠올렸다. 정수와 소수의 차이는 분수로 표현이 되느냐, 되지 않느냐에 따라 차이가 나기도 하며, 또한 파이 등 특정한 값을 나타내는 것에 의하여 소수인지 정수인지 판별이 나게 된다.\n",
+    "\n",
+    "프로그래머 X는 입력값을 숫자를 입력하거나 문자를 입력하려고 하는데,\n",
+    "\n",
+    "1. 만약 숫자를 입력하였으면 그것이 정수인지, 소수인지 구별하는 프로그램을 짜보도록 하고,\n",
+    "2. 만약 문자를 입력하였으면 숫자가 아니므로 math error를 표시하게 하라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> +6546984\n",
+      "정수입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = input('>>> ')\n",
+    "\n",
+    "opt = 0\n",
+    "\n",
+    "if num[0] == '0': \n",
+    "    print('math error')\n",
+    "    opt = 2\n",
+    "    \n",
+    "try:\n",
+    "    num = int(num)\n",
+    "    \n",
+    "    for i in range(2, num):\n",
+    "        if opt == 2: break\n",
+    "\n",
+    "        if not num % i:\n",
+    "            print('정수입니다.')\n",
+    "            opt += 1\n",
+    "            break\n",
+    "\n",
+    "    if opt == 0: print('소수입니다.')\n",
+    "\n",
+    "except:\n",
+    "    print('math error')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 이 소수였군.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main(N):\n",
+    "    if N - int(N) == 0:\n",
+    "        print(\"정수\")\n",
+    "    if N - int(N) != 0:\n",
+    "        print(\"소수\")\n",
+    "try:\n",
+    "    N = input()\n",
+    "    N = float(N)\n",
+    "    main(N)\n",
+    "    \n",
+    "except ValueError:\n",
+    "    print(\"math error\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cardinal to Ordinal 기수를 서수로 바꾸기\n",
+    "기수(Cardinal)를 입력하면 영어 서수(Ordinal)로 출력하는 함수를 작성합니다.\n",
+    "```\n",
+    "1, 21, 31, 41, ... → 1st, 21st, 31st, 41st, ...\n",
+    "2, 22, 32, 42, ... → 2nd, 22nd, 32nd, 42nd, ...\n",
+    "3, 23, 33, 43, ... → 3rd, 23rd, 33rd, 43rd, ...\n",
+    "11, 12, 13, 111, 112, 113, 211, 212, 213, ...  → 11th, 12th, 13th, 111th, 112th, 113th, 211th, 212th, 213th, ...\n",
+    "4, 5, 6, 11, 12, 13, 101, 111, 112, ... → 4th, 5th, 6th, 11th, 12th, 13th, 101th, 111th, 112th, ...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 4546\n",
+      "4546th\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = input('>>> ')\n",
+    "\n",
+    "if len(num) == 1:\n",
+    "    if num == '1': print(num+'st')\n",
+    "    elif num == '2': print(num+'nd')\n",
+    "    elif num == '3': print(num+'rd')\n",
+    "    else: print(num+'th')\n",
+    "\n",
+    "else:\n",
+    "    if num[-2] == '1': print(num+'th')\n",
+    "    elif num[-1] == '1': print(num+'st')\n",
+    "    elif num[-1] == '2': print(num+'nd')\n",
+    "    elif num[-1] == '3': print(num+'rd')\n",
+    "    else: print(num+'th')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'23'"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -6750,6 +6893,51 @@
    "source": [
     "---"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
