--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -6878,20 +6878,64 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 배스킨라빈스31게임\n",
+    "게임규칙\n",
+    "```\n",
+    "게임의 참여자들은 차례를 정해 1부터 31까지의 수를 순차적으로 부른다. 한번에 1~3개까지 수를 연달아 부를 수 있으며, 마지막 31을 부른 사람이 진다.\n",
+    "```\n",
+    "- 컴퓨터가 무조건 먼저 시작하고,1P는 무조건 2번째로 말한다.컴퓨터가 무조건 이기게 만들어라.\n",
+    "- LEVEL1 예상\n",
+    "- 힌트1:4n-2라는 공식을 사용하면 됩니다.\n",
+    "- 힌트2:이 게임은 31을 부르면 지는 게임이니 30을 부르면 이깁니다."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "#### 전략 : 처음에 무조건 2를 부르고 그 다음부터 6 + 4n에 해당하는 값만 부른다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start!\n",
+      "1 2 \n",
+      ">>> 3\n",
+      "4 5 6 \n",
+      ">>> 7 8\n",
+      "9 10 \n",
+      ">>> 12\n",
+      "You Lose!\n"
+     ]
+    }
+   ],
+   "source": [
+    "user = []\n",
+    "list_31 = []\n",
+    "print('Start!')\n",
+    "\n",
+    "for num in range(1, 32):\n",
+    "    if num in [3, 7, 11, 15, 19, 23, 27, 31]:\n",
+    "        print()\n",
+    "        user = input('>>> ').split(' ')\n",
+    "        if len(user) > 3 or user[0] != str(num):   # 규칙을 어길 시 바로 패배\n",
+    "            break\n",
+    "    if not user:   # 필요없는 출력 방지\n",
+    "        print(num, end=' ')\n",
+    "    while user:\n",
+    "        del user[0]\n",
+    "        break\n",
+    "    list_31.append(num)\n",
+    "    \n",
+    "print('You Lose!')"
    ]
   },
   {
@@ -6904,13 +6948,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "append() takes exactly one argument (2 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-b0abef263efc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: append() takes exactly one argument (2 given)"
+     ]
+    }
+   ],
    "source": []
   },
   {
