--- a/pandas/Pandas_Intro.ipynb
+++ b/pandas/Pandas_Intro.ipynb
@@ -20577,81 +20577,474 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 03 - 3 시리즈 다루기 - 응용 (63p)\n",
+    "- Boolean 추출"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Born</th>\n",
+       "      <th>Died</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Occupation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rosaline Franklin</td>\n",
+       "      <td>1920-07-25</td>\n",
+       "      <td>1958-04-16</td>\n",
+       "      <td>37</td>\n",
+       "      <td>Chemist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>William Gosset</td>\n",
+       "      <td>1876-06-13</td>\n",
+       "      <td>1937-10-16</td>\n",
+       "      <td>61</td>\n",
+       "      <td>Statistician</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Florence Nightingale</td>\n",
+       "      <td>1820-05-12</td>\n",
+       "      <td>1910-08-13</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Nurse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Marie Curie</td>\n",
+       "      <td>1867-11-07</td>\n",
+       "      <td>1934-07-04</td>\n",
+       "      <td>66</td>\n",
+       "      <td>Chemist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rachel Carson</td>\n",
+       "      <td>1907-05-27</td>\n",
+       "      <td>1964-04-14</td>\n",
+       "      <td>56</td>\n",
+       "      <td>Biologist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>John Snow</td>\n",
+       "      <td>1813-03-15</td>\n",
+       "      <td>1858-06-16</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Physician</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Alan Turing</td>\n",
+       "      <td>1912-06-23</td>\n",
+       "      <td>1954-06-07</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Computer Scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Johann Gauss</td>\n",
+       "      <td>1777-04-30</td>\n",
+       "      <td>1855-02-23</td>\n",
+       "      <td>77</td>\n",
+       "      <td>Mathematician</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Name        Born        Died  Age          Occupation\n",
+       "0     Rosaline Franklin  1920-07-25  1958-04-16   37             Chemist\n",
+       "1        William Gosset  1876-06-13  1937-10-16   61        Statistician\n",
+       "2  Florence Nightingale  1820-05-12  1910-08-13   90               Nurse\n",
+       "3           Marie Curie  1867-11-07  1934-07-04   66             Chemist\n",
+       "4         Rachel Carson  1907-05-27  1964-04-14   56           Biologist\n",
+       "5             John Snow  1813-03-15  1858-06-16   45           Physician\n",
+       "6           Alan Turing  1912-06-23  1954-06-07   41  Computer Scientist\n",
+       "7          Johann Gauss  1777-04-30  1855-02-23   77       Mathematician"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "scientists = pd.read_csv('C:/Users/user/Pandas/doit_pandas/data/scientists.csv')\n",
+    "scientists"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(59.125, 90, 58.5, 37)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ages = scientists['Age']\n",
+    "\n",
+    "ages.mean(), ages.max(), ages.median(), ages.min()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    False\n",
+      "1     True\n",
+      "2     True\n",
+      "3     True\n",
+      "4    False\n",
+      "5    False\n",
+      "6    False\n",
+      "7     True\n",
+      "Name: Age, dtype: bool\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1    61\n",
+       "2    90\n",
+       "3    66\n",
+       "7    77\n",
+       "Name: Age, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 평균나이보다 많은 사람만 추출\n",
+    "print(ages > ages.mean())\n",
+    "ages[ages > ages.mean()]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    37\n",
+       "3    66\n",
+       "4    56\n",
+       "7    77\n",
+       "Name: Age, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 임의로 불린 추출\n",
+    "ages[[True, False, False, True, True, False, False, True]]   # 0 3 4 7"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    37\n",
+      "1    61\n",
+      "2    90\n",
+      "3    66\n",
+      "4    56\n",
+      "5    45\n",
+      "6    41\n",
+      "7    77\n",
+      "Name: Age, dtype: int64\n",
+      "0     74\n",
+      "1    122\n",
+      "2    180\n",
+      "3    132\n",
+      "4    112\n",
+      "5     90\n",
+      "6     82\n",
+      "7    154\n",
+      "Name: Age, dtype: int64\n",
+      "0    111\n",
+      "1    183\n",
+      "2    270\n",
+      "3    198\n",
+      "4    168\n",
+      "5    135\n",
+      "6    123\n",
+      "7    231\n",
+      "Name: Age, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ages)\n",
+    "print(ages+ages)   # 벡터의 덧셈\n",
+    "print(ages*3)      # 벡터의 스칼라 곱"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      1\n",
+      "1    100\n",
+      "dtype: int64\n",
+      "\n",
+      "0     38.0\n",
+      "1    161.0\n",
+      "2      NaN\n",
+      "3      NaN\n",
+      "4      NaN\n",
+      "5      NaN\n",
+      "6      NaN\n",
+      "7      NaN\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pd.Series([1, 100]))\n",
+    "print()\n",
+    "print(ages + pd.Series([1, 100]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03 - 4 데이터프레임 다루기\n",
+    "- 불린 추출과 브로드캐스팅"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03 - 5 시리즈와 데이터프레임의 데이터 처리하기 "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Born</th>\n",
+       "      <th>Died</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Occupation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rosaline Franklin</td>\n",
+       "      <td>1920-07-25</td>\n",
+       "      <td>1958-04-16</td>\n",
+       "      <td>37</td>\n",
+       "      <td>Chemist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>William Gosset</td>\n",
+       "      <td>1876-06-13</td>\n",
+       "      <td>1937-10-16</td>\n",
+       "      <td>61</td>\n",
+       "      <td>Statistician</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Florence Nightingale</td>\n",
+       "      <td>1820-05-12</td>\n",
+       "      <td>1910-08-13</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Nurse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Marie Curie</td>\n",
+       "      <td>1867-11-07</td>\n",
+       "      <td>1934-07-04</td>\n",
+       "      <td>66</td>\n",
+       "      <td>Chemist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rachel Carson</td>\n",
+       "      <td>1907-05-27</td>\n",
+       "      <td>1964-04-14</td>\n",
+       "      <td>56</td>\n",
+       "      <td>Biologist</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Name        Born        Died  Age    Occupation\n",
+       "0     Rosaline Franklin  1920-07-25  1958-04-16   37       Chemist\n",
+       "1        William Gosset  1876-06-13  1937-10-16   61  Statistician\n",
+       "2  Florence Nightingale  1820-05-12  1910-08-13   90         Nurse\n",
+       "3           Marie Curie  1867-11-07  1934-07-04   66       Chemist\n",
+       "4         Rachel Carson  1907-05-27  1964-04-14   56     Biologist"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scientists.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   Name        Born        Died  Age    Occupation    born_dt  \\\n",
+      "0     Rosaline Franklin  1920-07-25  1958-04-16   37       Chemist 1920-07-25   \n",
+      "1        William Gosset  1876-06-13  1937-10-16   61  Statistician 1876-06-13   \n",
+      "2  Florence Nightingale  1820-05-12  1910-08-13   90         Nurse 1820-05-12   \n",
+      "3           Marie Curie  1867-11-07  1934-07-04   66       Chemist 1867-11-07   \n",
+      "4         Rachel Carson  1907-05-27  1964-04-14   56     Biologist 1907-05-27   \n",
+      "\n",
+      "     died_dt  \n",
+      "0 1958-04-16  \n",
+      "1 1937-10-16  \n",
+      "2 1910-08-13  \n",
+      "3 1934-07-04  \n",
+      "4 1964-04-14  \n"
+     ]
+    }
+   ],
+   "source": [
+    "born_dt = pd.to_datetime(scientists['Born'], format='%Y-%m-%d')\n",
+    "died_dt = pd.to_datetime(scientists['Died'], format='%Y-%m-%d')\n",
+    "\n",
+    "scientists['born_dt'], scientists['died_dt'] = (born_dt, died_dt)\n",
+    "print(scientists.head())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   13779 days\n",
+       "1   22404 days\n",
+       "2   32964 days\n",
+       "3   24345 days\n",
+       "4   20777 days\n",
+       "5   16529 days\n",
+       "6   15324 days\n",
+       "7   28422 days\n",
+       "dtype: timedelta64[ns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scientists.died_dt - scientists.born_dt"
+   ]
   },
   {
    "cell_type": "code",
