--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -6899,7 +6899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -6908,11 +6908,21 @@
      "text": [
       "Start!\n",
       "1 2 \n",
-      ">>> 3\n",
-      "4 5 6 \n",
+      ">>> 3 4 5\n",
+      "6 \n",
       ">>> 7 8\n",
       "9 10 \n",
-      ">>> 12\n",
+      ">>> 11 12\n",
+      "13 14 \n",
+      ">>> 15 16 17\n",
+      "18 \n",
+      ">>> 19\n",
+      "20 21 22 \n",
+      ">>> 23 24\n",
+      "25 26 \n",
+      ">>> 27\n",
+      "28 29 30 \n",
+      ">>> 31\n",
       "You Lose!\n"
      ]
     }
@@ -6955,25 +6965,222 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 기계의 마라톤 기록\n",
+    "항상 일정한 속도로 달리는 기계가 있다고 합시다. 이 기계의 100m 달리기 기록을 입력받으면 마라톤에서의 기록을 구하시면 됩니다. 마라톤 경기에서 달리는 거리는 42.195km입니다. 100m 달리기와 마라톤의 코스는 모두 직선이라고 합니다(회전 시 걸리는 시간을 고려하지 않습니다). 기계의 파손 및 배터리 방전 시간도 고려하지 않습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 183.12\n",
+      "77267.484 sec\n",
+      "1287 min 47.48 sec\n",
+      "21 hour 27 min 47.48 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "record = float(input('>>> '))\n",
+    "\n",
+    "print(421.95*record, 'sec')\n",
+    "print(int(421.95*record//60), 'min', round(421.95*record%60, 2), 'sec')\n",
+    "print(int(421.95*record//3600), 'hour', int(421.95*record%3600)//60, 'min', round(421.95*record%3600%60, 2), 'sec')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 수 암호화 프로그램\n",
+    "0~25만의 수 1개를 입력으로 받으면 그 수를 암호화하여 출력하는 프로그램을 작성하세요. 방법은 다음과 같습니다. \n",
+    "\n",
+    "1. 입력받은 수의 제곱근에 1000을 곱한다. \n",
+    "```\n",
+    "(예시: 2 => 1.414213... * 1000 => 1414.213...) \n",
+    "```\n",
+    "2. 1의 결과에서 소수점 이하를 버림한다. \n",
+    "```\n",
+    "(예시: 1414.213... => 1414) \n",
+    "```\n",
+    "3. 2의 결과에서 입력받은 수를 뺀다.\n",
+    "```\n",
+    "(예시: 1414 => 1414 - 2 => 1412) \n",
+    "```\n",
+    "이렇게 하면 2를 입력받았을 때 1412를 출력합니다. 다음 결과로 테스트하세요."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    ">>> password(2)\n",
+    "1412\n",
+    ">>> password(125000)\n",
+    "228553\n",
+    ">>> password(250000)\n",
+    "250000\n",
+    ">>> password(100000)\n",
+    "216227\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 100000\n",
+      "216227\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy import sqrt\n",
+    "\n",
+    "num = int(input('>>> '))\n",
+    "num = int(sqrt(num)*1000) - num\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 배열에 최대값, 최소값 , 중간값을 출력해보기\n",
+    "숫자형 배열을 선언한 후, for문과 if, else문만 사용해서 가장 큰 값, 가장 작은 값, 중간 값을 추출하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 0 1 15 48 -21 31 48.5 12.23\n",
+      "평균 값 : 16.84125\n",
+      "===========================\n",
+      "최대 값 : 48.5\n",
+      "중간 값 : 13.5\n",
+      "최소 값 : -21.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_list = list(map(float, input('>>> ').split(' ')))\n",
+    "max_, min_, sum_ = 0, 0, 0\n",
+    "\n",
+    "for i in num_list:\n",
+    "    sum_ += i\n",
+    "    if max_ <= i:\n",
+    "        max_ = i\n",
+    "    if min_ >= i:\n",
+    "        min_ = i\n",
+    "\n",
+    "if len(num_list)%2:\n",
+    "    mid_ = num_list[len(num_list)//2]\n",
+    "else:\n",
+    "    mid_ = (num_list[len(num_list)//2-1]+num_list[len(num_list)//2])/2\n",
+    "    \n",
+    "print('평균 값 :', sum_/len(num_list))\n",
+    "print('===========================')\n",
+    "print('최대 값 :', max_)\n",
+    "print('중간 값 :', mid_)\n",
+    "print('최소 값 :', min_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "append() takes exactly one argument (2 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-b0abef263efc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: append() takes exactly one argument (2 given)"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
