--- a/Python_basic/Codingdojang.ipynb
+++ b/Python_basic/Codingdojang.ipynb
@@ -7148,79 +7148,56 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 업앤다운 UP&Down 숫자맞추기 게임\n",
+    "```\n",
+    "컴퓨터가 1~100 숫자(정수 범위) 중 하나를 랜덤으로 정합니다. (이를 알려주지 않습니다.)\n",
+    "사용자는 이 숫자를 맞추어야 합니다.\n",
+    "입력한 숫자보다 정답이 크면 → \"UP\" 출력,\n",
+    "입력한 숫자보다 정답이 작으면 → \"DOWN\" 출력.\n",
+    "정답을 맞추면 → \"정답\"을 출력하고, 지금까지 숫자를 입력한 횟수를 알려줍니다.\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> 50\n",
+      "UP\n",
+      ">>> 70\n",
+      "DOWN\n",
+      ">>> 64\n",
+      "DOWN\n",
+      ">>> 60\n",
+      "UP\n",
+      ">>> 62\n",
+      "DOWN\n",
+      ">>> 61\n",
+      "정답입니다! 6회 만에 맞췄어요.\n"
+     ]
+    }
+   ],
    "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
+    "import random\n",
+    "\n",
+    "answer = random.choice(range(1, 101))\n",
+    "user, cnt = 0, 0\n",
+    "\n",
+    "while answer != user:\n",
+    "    user = int(input('>>> '))\n",
+    "    cnt += 1\n",
+    "    if user < answer:\n",
+    "        print('UP')\n",
+    "    elif user > answer:\n",
+    "        print('DOWN')\n",
+    "\n",
+    "print(f'정답입니다! {cnt}회 만에 맞췄어요.')"
    ]
   },
   {
